@@ -124,7 +124,7 @@ const periph_t plusd_peripherals[] = {
   /* ---- ---- 1110 0111 */
   { 0x00ff, 0x00e7, plusd_mem_read, plusd_mem_write },
   /* 0000 0000 1111 0111 */
-  { 0x00ff, 0x00f7, plusd_printer_read, printer_parallel_write },
+  { 0x00ff, 0x00f7, plusd_printer_read, plusd_printer_write },
 };
 
 const size_t plusd_peripherals_count =
@@ -239,6 +239,8 @@ plusd_end( void )
 libspectrum_byte
 plusd_sr_read( libspectrum_word port GCC_UNUSED, int *attached )
 {
+  if( !plusd_available ) return 0xff;
+
   *attached = 1;
   return wd1770_sr_read( &plusd_fdc );
 }
@@ -246,12 +248,16 @@ plusd_sr_read( libspectrum_word port GCC_UNUSED, int *attached )
 void
 plusd_cr_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 {
+  if( !plusd_available ) return;
+
   wd1770_cr_write( &plusd_fdc, b );
 }
 
 libspectrum_byte
 plusd_tr_read( libspectrum_word port GCC_UNUSED, int *attached )
 {
+  if( !plusd_available ) return 0xff;
+
   *attached = 1;
   return wd1770_tr_read( &plusd_fdc );
 }
@@ -259,12 +265,16 @@ plusd_tr_read( libspectrum_word port GCC_UNUSED, int *attached )
 void
 plusd_tr_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 {
+  if( !plusd_available ) return;
+
   wd1770_tr_write( &plusd_fdc, b );
 }
 
 libspectrum_byte
 plusd_sec_read( libspectrum_word port GCC_UNUSED, int *attached )
 {
+  if( !plusd_available ) return 0xff;
+
   *attached = 1;
   return wd1770_sec_read( &plusd_fdc );
 }
@@ -272,12 +282,16 @@ plusd_sec_read( libspectrum_word port GCC_UNUSED, int *attached )
 void
 plusd_sec_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 {
+  if( !plusd_available ) return;
+
   wd1770_sec_write( &plusd_fdc, b );
 }
 
 libspectrum_byte
 plusd_dr_read( libspectrum_word port GCC_UNUSED, int *attached )
 {
+  if( !plusd_available ) return 0xff;
+
   *attached = 1;
   return wd1770_dr_read( &plusd_fdc );
 }
@@ -285,6 +299,8 @@ plusd_dr_read( libspectrum_word port GCC_UNUSED, int *attached )
 void
 plusd_dr_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 {
+  if( !plusd_available ) return;
+
   wd1770_dr_write( &plusd_fdc, b );
 }
 
@@ -293,6 +309,8 @@ plusd_cn_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 {
   int drive, side;
   int i;
+
+  if( !plusd_available ) return;
 
   drive = ( b & 0x03 ) == 2 ? 1 : 0;
   side = ( b & 0x80 ) ? 1 : 0;
@@ -310,6 +328,8 @@ plusd_cn_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 libspectrum_byte
 plusd_mem_read( libspectrum_word port GCC_UNUSED, int *attached GCC_UNUSED )
 {
+  if( !plusd_available ) return 0xff;
+
   /* should we set *attached = 1? */
 
   plusd_page();
@@ -319,12 +339,16 @@ plusd_mem_read( libspectrum_word port GCC_UNUSED, int *attached GCC_UNUSED )
 void
 plusd_mem_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b GCC_UNUSED )
 {
+  if( !plusd_available ) return;
+
   plusd_unpage();
 }
 
 libspectrum_byte
 plusd_printer_read( libspectrum_word port GCC_UNUSED, int *attached )
 {
+  if( !plusd_available ) return 0xff;
+
   *attached = 1;
 
   /* bit 7 = busy. other bits high? */
@@ -333,6 +357,14 @@ plusd_printer_read( libspectrum_word port GCC_UNUSED, int *attached )
     return(0xff); /* no printer attached */
 
   return(0x7f);   /* never busy */
+}
+
+void
+plusd_printer_write( libspectrum_word port, libspectrum_byte b )
+{
+  if( !plusd_available ) return;
+
+  printer_parallel_write( port, b );
 }
 
 int
